src/test/ui/const-generics/min_const_generics/const_default_first.stderr
error: generic parameters with a default must be trailing
  --> $DIR/const_default_first.rs:6:19
   |
LL | struct Both<const N: usize=3, T> {
   |                   ^

error: aborting due to previous error

